--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "frontend-ticomtoys": {
+        "integracion-continua": {
             "root": "",
             "sourceRoot": "src",
             "projectType": "application",
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/frontend-ticomtoys",
+                        "outputPath": "dist/integracion-continua",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
@@ -96,18 +96,18 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "frontend-ticomtoys:build"
+                        "browserTarget": "integracion-continua:build"
                     },
                     "configurations": {
                         "production": {
-                            "browserTarget": "frontend-ticomtoys:build:production"
+                            "browserTarget": "integracion-continua:build:production"
                         }
                     }
                 },
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "frontend-ticomtoys:build"
+                        "browserTarget": "integracion-continua:build"
                     }
                 },
                 "test": {
@@ -141,7 +141,7 @@
                 }
             }
         },
-        "frontend-ticomtoys-e2e": {
+        "integracion-continua-e2e": {
             "root": "e2e/",
             "projectType": "application",
             "prefix": "",
@@ -150,11 +150,11 @@
                     "builder": "@angular-devkit/build-angular:protractor",
                     "options": {
                         "protractorConfig": "e2e/protractor.conf.js",
-                        "devServerTarget": "frontend-ticomtoys:serve"
+                        "devServerTarget": "integracion-continua:serve"
                     },
                     "configurations": {
                         "production": {
-                            "devServerTarget": "frontend-ticomtoys:serve:production"
+                            "devServerTarget": "integracion-continua:serve:production"
                         }
                     }
                 },
@@ -170,5 +170,5 @@
             }
         }
     },
-    "defaultProject": "frontend-ticomtoys"
+    "defaultProject": "integracion-continua"
 }
